fix z-index on loading splash element

--- a/docs/style.css
+++ b/docs/style.css
@@ -467,6 +467,7 @@ path {
   padding: none;
   margin: none;
   transition: all 5s;
+  z-index: 1000;
 }
 
 .loadMsg {
