--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -97,6 +97,7 @@ path {
     padding:none;
     margin:none;
     transition:all 5s;
+    z-index:1000;
 }
 
 .loadMsg{
